PATCH Audit partially implemented
