# src/routes.ts
@@ -11,6 +11,7 @@ import { UpdateUserController } from "./app/controllers/UpdateUserController";
 import { CreateAuditController } from "./app/controllers/Audit/CreateAuditController";
 import { GetAuditsByUserController } from "./app/controllers/Audit/GetAuditsByUserController";
 import { DeleteAuditController } from "./app/controllers/Audit/DeleteAuditController";
+import { UpdateAuditController } from "./app/controllers/Audit/UpdateAuditController";
 
 const router = Router();
 
@@ -28,10 +29,14 @@ router.patch(
   authMiddleware,
   new UpdateUserController().handle
 );
-router.get("/v1/users/:userId/audits", new GetAuditsByUserController().handle);
+router.get(
+  "/v1/users/:userId/audits",
+  authMiddleware,
+  new GetAuditsByUserController().handle
+);
 router.post("/v1/audits", authMiddleware, new CreateAuditController().handle);
 router.get("/v1/audits/:auditId");
-router.patch("/v1/audits/:auditId");
+router.patch("/v1/audits/:auditId", new UpdateAuditController().handle);
 router.delete(
   "/v1/audits/:auditId",
   authMiddleware,
